versioned_docs/version-2.29/reference/subsystems/prettier.mdx
---
title: prettier
description: |
  The Prettier utility for formatting JS/TS (and others) code (https://prettier.io/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Prettier utility for formatting JS/TS (and others) code (https://prettier.io/).

Backend: <span className="color--primary">`pants.backend.experimental.javascript.lint.prettier`</span>

Config section: <span className="color--primary">`[prettier]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--prettier-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_PRETTIER_ARGS'
  toml_repr={`[prettier]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Prettier, e.g. `--prettier-args='--version'`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]prettier-skip`}
  env_repr='PANTS_PRETTIER_SKIP'
  toml_repr={`[prettier]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Prettier when running `pants fmt` and `pants lint`.

</Option>

## Advanced options

### `binary_name`

<Option
  cli_repr={`--prettier-binary-name=<str>`}
  env_repr='PANTS_PRETTIER_BINARY_NAME'
  toml_repr={`[prettier]
binary_name = <str>`}
  default_repr={`None`}
>

Override the binary to run for this tool. Defaults to the package name.

</Option>

### `install_from_resolve`

<Option
  cli_repr={`--prettier-install-from-resolve=<str>`}
  env_repr='PANTS_PRETTIER_INSTALL_FROM_RESOLVE'
  toml_repr={`[prettier]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve, instead of the version configured in this subsystem.

If unspecified, the tool will use the default configured package manager [nodejs].package_manager`, and install the tool without a lockfile.

</Option>

### `version`

<Option
  cli_repr={`--prettier-version=<str>`}
  env_repr='PANTS_PRETTIER_VERSION'
  toml_repr={`[prettier]
version = <str>`}
  default_repr={`prettier@3.5.2`}
>

Version string for the tool in the form package@version (e.g. prettier@3.5.2)

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
